# agentic-rag-multiagent

./: .gitignore  LICENSE.md  README.md  pyproject.toml  runtime.txt
backend/: urls.py  views.py
backend/agents/: relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
backend/config/: constants.py  settings.py
backend/document_processor/: file_handler.py
backend/retriever/: builder.py
backend/test/: test_ocr_with_docling.py
frontend/: index.html  pnpm-lock.yaml
frontend/src/: Layout.tsx  api.ts  index.css
frontend/src/components/ui/: button.tsx  document-uploader.tsx  example-selector.tsx  question-input.tsx  reponses-inputs.tsx  select.tsx
frontend/src/hooks/: useTimer.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx
src/: index.css
src/components/: Dashboard.tsx  Generate.tsx  Layout.tsx  Models.tsx  Training.tsx
src/components/ui/: image-modal.tsx  input.tsx  radio-group.tsx  recent-generations.tsx  recent-images.tsx
src/pages/: Index.tsx
